[package]
name = "bspline"
version = "0.2.4"
authors = ["Will Usher <will@willusher.io>"]
description = "A simple generic library for computing B-splines"
homepage = "https://github.com/Twinklebear/bspline"
documentation = "https://docs.rs/bspline/"
repository = "https://github.com/Twinklebear/bspline"
readme = "README.md"
keywords = ["curve", "spline", "b-spline"]
license = "MIT"

exclude = [
	".travis.yml",
	"./*.png",
	".gitignore",
]

[features]
nalgebra-support = ["nalgebra"]

[dependencies]
num-traits = "0.2"
trait-set = "0.2"
nalgebra = { version = "0.3", optional=true}

[dev-dependencies]
image = "0.22"

